--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
           <ul
             class="list-unstyled d-flex align-items-center flex-wrap gap-3 justify-content-between"
             id="list"
-          >
-           
-          </ul>
-          <nav aria-label="Page navigation example" >
+          ></ul>
+          <nav aria-label="Page navigation example">
             <ul class="pagination">
               <li class="page-item">
                 <a class="page-link" href="#" aria-label="Previous">
@@ -103,6 +101,30 @@
         </div>
       </div>
     </div>
+
+    <template id="template">
+      <li>
+        <div class="card" style="width: 22rem">
+          <img
+            src="https://i.ytimg.com/vi/4hZi5QaMBFc/mqdefault.jpg"
+            class="card-img-top"
+            alt="card-img-top"
+          />
+          <div class="card-body">
+            <h5 class="card-text">Patton Oswalt: Annihilation</h5>
+            <p class="card-text year">2017</p>
+            <p class="card-text rating">7.4</p>
+            <a
+              href="https://www.youtube.com/watch?v=4hZi5QaMBFc"
+              target="_blanc"
+              class="btn btn-outline-primary"
+              >Watch trailer</a
+            ><button class="btn btn-outline-info">More info</button
+            ><button class="btn btn-outline-success">Bookmark</button>
+          </div>
+        </div>
+      </li>
+    </template>
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/movies.js"></script>
